--- a/scene/good_night.yaml
+++ b/scene/good_night.yaml
@@ -1,11 +1,11 @@
-- name: Guten Morgen
+- name: Gute Nacht
   entities:
     input_boolean.night_mode:
+      state: 'on'
+    group.all_lights:
       state: 'off'
     light.stehlampe_flur:
       state: 'on'
       transition: 30
       color_temp: 200
       brightness_pct: 80
-    light.beleuchtung_kuche:
-      state: 'on'
