--- a/automations/lights_auto_off.yaml
+++ b/automations/lights_auto_off.yaml
@@ -7,11 +7,9 @@
     platform: state
     entity_id: light.beleuchtung_toilette
     to: 'on'
+    for:
+      minutes: 10
   action:
-    - delay: 0:10
-    - condition: state
-      entity_id: light.beleuchtung_toilette
-      state: 'on'
     - service: homeassistant.turn_off
       entity_id: light.beleuchtung_toilette
 
@@ -20,11 +18,9 @@
     platform: state
     entity_id: light.beleuchtung_kueche
     to: 'on'
+    for:
+      hours: 2
   action:
-    - delay: 02:00
-    - condition: state
-      entity_id: light.beleuchtung_kueche
-      state: 'on'
     - service: homeassistant.turn_off
       entity_id: light.beleuchtung_kueche
 
@@ -33,11 +29,9 @@
     platform: state
     entity_id: light.beleuchtung_flur
     to: 'on'
+    for:
+      hours: 2
   action:
-    - delay: 02:00
-    - condition: state
-      entity_id: light.beleuchtung_flur
-      state: 'on'
     - service: homeassistant.turn_off
       entity_id: light.beleuchtung_flur
 
@@ -46,11 +40,12 @@
     platform: state
     entity_id: light.stehlampe_flur
     to: 'on'
+    for:
+      hours: 2
   action:
-    - delay: 02:00
     - condition: state
-      entity_id: light.stehlampe_flur
-      state: 'on'
+      entity_id: input_boolean.night_mode
+      state: 'off'
     - service: light.turn_off
       entity_id: light.stehlampe_flur
       data:
@@ -61,10 +56,8 @@
     platform: state
     entity_id: light.beleuchtung_esszimmer
     to: 'on'
+    for:
+      hours: 2
   action:
-    - delay: 02:00
-    - condition: state
-      entity_id: light.beleuchtung_esszimmer
-      state: 'on'
     - service: homeassistant.turn_off
       entity_id: light.beleuchtung_esszimmer
