add windSpeed to weather group

--- a/groups/weather.yaml
+++ b/groups/weather.yaml
@@ -3,5 +3,6 @@ weather:
   entities:
     - sensor.weather_symbol
     - sensor.weather_temperature
+    - sensor.weather_wind_speed
     - sensor.weather_cloudiness
     - sensor.weather_dewpoint_temperature
