--- a/packages/network_devices.yaml
+++ b/packages/network_devices.yaml
@@ -1,61 +1,22 @@
 binary_sensor:
-  - platform: ping
-    name: LG TV
-    host: 192.168.10.65
-  - platform: ping
-    name: Emby Server
-    host: 192.168.10.49
-  - platform: ping
-    name: FreeNAS
-    host: 192.168.10.48
-  - platform: ping
-    name: FRITZ!Repeater
-    host: 192.168.10.69
-  - platform: ping
-    name: MiCAM Arthur
-    host: 192.168.10.76
-  - platform: ping
-    name: NZBGet
-    host: 192.168.10.51
-  - platform: ping
-    name: Radarr
-    host: 192.168.10.52
-  - platform: ping
-    name: Sonarr
-    host: 192.168.10.53
-  - platform: ping
-    name: Sonoff Toilette
-    host: 192.168.10.91
-  - platform: ping
-    name: Sonoff Kueche
-    host: 192.168.10.96
-  - platform: ping
-    name: Sonoff Flur
-    host: 192.168.10.90
-  - platform: ping
-    name: Sonoff Esszimmer
-    host: 192.168.10.94
-  - platform: ping
-    name: Tado Bridge
-    host: 192.168.10.88
-  - platform: ping
-    name: Yeelight Flur
-    host: 192.168.10.87
-  - platform: ping
-    name: Kodi Schlafzimmer
-    host: 192.168.10.71
-  - platform: ping
-    name: Kodi Wohnzimmer
-    host: 192.168.10.62
-  - platform: ping
-    name: ER-X-Main
-    host: 192.168.99.1
-  - platform: ping
-    name: UAP-Outdoor
-    host: 192.168.99.10
-  - platform: ping
-    name: UAP-Flur
-    host: 192.168.99.11
+  - platform: device_tracker_sensor
+    entities:
+      - device_tracker.5a10d515de5e
+      - device_tracker.788a2097a2
+      - device_tracker.ece09bf81d9a
+      - device_tracker.embylocal
+      - device_tracker.f4f26d8b1e80
+      - device_tracker.freenaslocal
+      - device_tracker.libreelecwzlocal
+      - device_tracker.micamlocal
+      - device_tracker.nzbgetlocal
+      - device_tracker.radarrlocal
+      - device_tracker.sonarrlocal
+      - device_tracker.sonoff2429local
+      - device_tracker.sonoff6910local
+      - device_tracker.sonoff7199local
+      - device_tracker.sonoffmain7812local
+      - device_tracker.yeelinklightcolor1_miio56540983local
 
 group:
   network_view:
@@ -70,34 +31,34 @@ group:
   network_devices:
     name: Netzwerk Devices
     entities:
-      - binary_sensor.lg_tv
-      - binary_sensor.emby_server
-      - binary_sensor.freenas
-      - binary_sensor.micam_arthur
-      - binary_sensor.kodi_wohnzimmer
-      - binary_sensor.kodi_schlafzimmer
+      - binary_sensor.device_tracker_device_tracker_lg_tv
+      - binary_sensor.device_tracker_embylocal
+      - binary_sensor.device_tracker_freenaslocal
+      - binary_sensor.device_tracker_micamlocal
+      - binary_sensor.device_tracker_libreelecwzlocal
+      - binary_sensor.device_tracker_libreeleclocal
 
   network_devices_download:
     name: Downloader
     entities:
-      - binary_sensor.nzbget
-      - binary_sensor.radarr
-      - binary_sensor.sonarr
+      - binary_sensor.device_tracker_nzbgetlocal
+      - binary_sensor.device_tracker_radarrlocal
+      - binary_sensor.device_tracker_sonarrlocal
 
   network_devices_mgmt:
     name: LAN Infrastruktur
     entities:
-      - binary_sensor.erxmain
-      - binary_sensor.uapoutdoor
-      - binary_sensor.uapflur
-      - binary_sensor.fritzrepeater
+      - binary_sensor.device_tracker_erxmain
+      - binary_sensor.device_tracker_uapoutdoor
+      - binary_sensor.device_tracker_uapflur
+      - binary_sensor.device_tracker_fritzrepeater
 
   network_iot_devices:
     name: IoT Devices
     entities:
-      - binary_sensor.sonoff_toilette
-      - binary_sensor.sonoff_kueche
-      - binary_sensor.sonoff_flur
-      - binary_sensor.sonoff_esszimmer
-      - binary_sensor.tado_bridge
-      - binary_sensor.yeelight_flur
+      - binary_sensor.device_tracker_sonoff7199local
+      - binary_sensor.device_tracker_sonoffmain7812local
+      - binary_sensor.device_tracker_sonoff6910local
+      - binary_sensor.device_tracker_sonoff2429local
+      - binary_sensor.device_tracker_tado_bridge
+      - binary_sensor.device_tracker_yeelinklightcolor1_miio56540983local
