--- a/automations/all_leave.yaml
+++ b/automations/all_leave.yaml
@@ -11,7 +11,7 @@
       entity_id: group.all_lights
     - service: media_player.turn_off
       entity_id: media_player.lg_tv
-    - service: media_player.turn_off
+    - service: media_player.media_pause
       entity_id: media_player.volumio
     - service: notify.slack
       data_template:
