--- a/configuration.yaml
+++ b/configuration.yaml
@@ -60,6 +60,12 @@ notify:
     api_key: !secret SLACK_API_KEY
     default_channel: 'automation'
 
+panel_iframe:
+ nodered:
+   title: 'Node-RED'
+   icon: 'mdi:shuffle-variant'
+   url: 'http://127.0.0.1:1880/'
+
 automation: !include_dir_merge_list automations
 #binary_sensor: !include_dir_merge_list binary_sensor
 device_tracker: !include_dir_merge_list device_tracker
