--- a/lights/sonoff.yaml
+++ b/lights/sonoff.yaml
@@ -1,6 +1,7 @@
 - platform: mqtt
   name: "beleuchtung_flur"
-  state_topic: "stat/floor/light/POWER"
+  state_topic: "tele/floor/light/RESULT"
+  value_template: '{{ value_json["POWER"] }}'
   command_topic: "cmnd/floor/light/POWER"
   availability_topic: "tele/floor/light/LWT"
   qos: 1
@@ -10,7 +11,8 @@
   payload_not_available: "Offline"
 - platform: mqtt
   name: "beleuchtung_toilette"
-  state_topic: "stat/toilett/light/POWER"
+  state_topic: "tele/toilett/light/RESULT"
+  value_template: '{{ value_json["POWER"] }}'
   command_topic: "cmnd/toilett/light/POWER"
   availability_topic: "tele/toilett/light/LWT"
   qos: 1
@@ -20,7 +22,8 @@
   payload_not_available: "Offline"
 - platform: mqtt
   name: "beleuchtung_esszimmer"
-  state_topic: "stat/floor/light2/POWER"
+  state_topic: "tele/floor/light2/RESULT"
+  value_template: '{{ value_json["POWER"] }}'
   command_topic: "cmnd/floor/light2/POWER"
   availability_topic: "tele/floor/light2/LWT"
   qos: 1
@@ -30,7 +33,8 @@
   payload_not_available: "Offline"
 - platform: mqtt
   name: "beleuchtung_kueche"
-  state_topic: "stat/kitchen/light/POWER"
+  state_topic: "tele/kitchen/light/RESULT"
+  value_template: '{{ value_json["POWER"] }}'
   command_topic: "cmnd/kitchen/light/POWER"
   availability_topic: "tele/kitchen/light/LWT"
   qos: 1
