--- a/configuration.yaml
+++ b/configuration.yaml
@@ -65,7 +65,7 @@ panel_iframe:
    url: 'http://192.168.10.95:1880/'
 
 automation: !include_dir_merge_list automations
-#binary_sensor: !include_dir_merge_list binary_sensor
+binary_sensor: !include_dir_merge_list binary_sensor
 device_tracker: !include_dir_merge_list device_tracker
 group: !include_dir_merge_named groups
 input_boolean: !include_dir_merge_named input_boolean
