--- a/switch/pilight.yaml
+++ b/switch/pilight.yaml
@@ -1,44 +1,44 @@
 - platform: pilight
   switches:
-    - rf_kueche1:
-        on_code:
-          protocol: kaku_switch
-          id: 5935104
-          unit: 1
-          'on': 1
-        off_code:
-          protocol: kaku_switch
-          id: 5935104
-          unit: 1
-          'off': 0
-        on_code_receive:
-          protocol: kaku_switch
-          id: 5935104
-          unit: 1
-          state: 'on'
-        off_code_receive:
-          protocol: kaku_switch
-          id: 5935104
-          unit: 1
-          state: 'off'
-    - rf_kueche2:
-        on_code:
-          protocol: kaku_switch
-          id: 5935104
-          unit: 2
-          'on': 1
-        off_code:
-          protocol: kaku_switch
-          id: 5935104
-          unit: 2
-          'off': 0
-        on_code_receive:
-          protocol: kaku_switch
-          id: 5935104
-          unit: 2
-          state: 'on'
-        off_code_receive:
-          protocol: kaku_switch
-          id: 5935104
-          unit: 2
-          state: 'off'
+    rf_kueche1:
+      on_code:
+        protocol: kaku_switch
+        id: 5935104
+        unit: 1
+        'on': 1
+      off_code:
+        protocol: kaku_switch
+        id: 5935104
+        unit: 1
+        'off': 0
+      on_code_receive:
+        protocol: arctech_switch
+        id: 5935104
+        unit: 1
+        state: 'on'
+      off_code_receive:
+        protocol: arctech_switch
+        id: 5935104
+        unit: 1
+        state: 'off'
+    rf_kueche2:
+      on_code:
+        protocol: kaku_switch
+        id: 5935104
+        unit: 2
+        'on': 1
+      off_code:
+        protocol: kaku_switch
+        id: 5935104
+        unit: 2
+        'off': 0
+      on_code_receive:
+        protocol: arctech_switch
+        id: 5935104
+        unit: 2
+        state: 'on'
+      off_code_receive:
+        protocol: arctech_switch
+        id: 5935104
+        unit: 2
+        state: 'off'
