--- a/switch/pilight.yaml
+++ b/switch/pilight.yaml
@@ -42,3 +42,46 @@
         id: 5935104
         unit: 2
         state: 'off'
+    rf_wz_stehlampe:
+      on_code:
+        protocol: clarus_switch
+        id: B3
+        unit: 24
+        'on': 1
+      off_code:
+        protocol: clarus_switch
+        id: B3
+        unit: 24
+        'off': 0
+      on_code_receive:
+        protocol: clarus_switch
+        id: B3
+        unit: 24
+        state: 'on'
+      off_code_receive:
+        protocol: clarus_switch
+        id: B3
+        unit: 24
+        state: 'off'
+    rf_arthur_lichterkette:
+      on_code:
+        protocol: clarus_switch
+        id: A7
+        unit: 24
+        'on': 1
+      off_code:
+        protocol: clarus_switch
+        id: A7
+        unit: 24
+        'off': 0
+      on_code_receive:
+        protocol: clarus_switch
+        id: A7
+        unit: 24
+        state: 'on'
+      off_code_receive:
+        protocol: clarus_switch
+        id: A7
+        unit: 24
+        state: 'off'
+
