--- a/switch/pilight.yaml
+++ b/switch/pilight.yaml
@@ -63,6 +63,27 @@
         id: B3
         unit: 24
         state: 'off'
+    rf_wz_lichtkugel:
+      on_code:
+        protocol: kaku_switch
+        id: 5935104
+        unit: 1
+        'on': 1
+      off_code:
+        protocol: kaku_switch
+        id: 5935104
+        unit: 1
+        'off': 0
+      on_code_receive:
+        protocol: arctech_switch
+        id: 5935104
+        unit: 1
+        state: 'on'
+      off_code_receive:
+        protocol: arctech_switch
+        id: 5935104
+        unit: 1
+        state: 'off'
     rf_arthur_lichterkette:
       on_code:
         protocol: clarus_switch
@@ -84,4 +105,3 @@
         id: A7
         unit: 24
         state: 'off'
-
