fix pilight rf sensor

--- a/switch/pilight.yaml
+++ b/switch/pilight.yaml
@@ -105,3 +105,24 @@
         id: A7
         unit: 24
         state: 'off'
+    rf_motion:
+      on_code:
+        protocol: arctech_switch
+        id: 21633024
+        unit: 1
+        'on': 1
+      off_code:
+        protocol: arctech_switch
+        id: 21633024
+        unit: 1
+        'off': 0
+      on_code_receive:
+        protocol: arctech_switch
+        id: 21633024
+        unit: 1
+        state: 'on'
+      off_code_receive:
+        protocol: arctech_switch
+        id: 21633024
+        unit: 1
+        state: 'off'
