--- a/binary_sensor/pilight.yaml
+++ b/binary_sensor/pilight.yaml
@@ -1,8 +1,5 @@
-- platform: pilight
-  name: Motion
-  variable: 'state'
-  payload:
-    id: 21633024
-    unit: 1
-  payload_on: 'on'
-  disarm_after_trigger: true
+- platform: template
+  sensors:
+    motion:
+      value_template: "{{ states.switch.motion.state == 'on' }}"
+      device_class: motion
