--- a/configuration.yaml
+++ b/configuration.yaml
@@ -25,6 +25,10 @@ updater:
 
 frontend:
   themes: !include_dir_merge_named themes
+  extra_html_url:
+    - /local/custom_ui/custom-weather-card.html
+  extra_html_url_es5:
+    - /local/custom_ui/custom-weather-card.html
 
 discovery:
   ignore:
@@ -68,6 +72,13 @@ panel_iframe:
    title: 'Node-RED'
    icon: 'mdi:shuffle-variant'
    url: 'http://192.168.10.95:1880/'
+
+weather:
+  - platform: yweather
+
+input_text:
+  weather:
+    name: weather
 
 automation: !include_dir_merge_list automations
 binary_sensor: !include_dir_merge_list binary_sensor
