--- a/configuration.yaml
+++ b/configuration.yaml
@@ -44,7 +44,7 @@ tado:
 mqtt:
   discovery: true
   discovery_prefix: homeassistant
-  broker: hassbian.local
+  broker: 192.168.10.95
   port: 1883
   client_id: homeassistant
   protocol: 3.1
@@ -58,7 +58,7 @@ camera:
     extra_arguments: '-c:v h264_mmal'
 
 pilight:
-  host: pilight.local
+  host: 192.168.10.93
   port: 5000
   send_delay: 0.8
 
@@ -77,6 +77,7 @@ panel_iframe:
 weather:
   - platform: yweather
 
+input_boolean:
 input_text:
   weather:
     name: weather
@@ -85,7 +86,6 @@ automation: !include_dir_merge_list automations
 binary_sensor: !include_dir_merge_list binary_sensor
 device_tracker: !include_dir_merge_list device_tracker
 group: !include_dir_merge_named groups
-input_boolean: !include_dir_merge_named input_boolean
 light: !include_dir_merge_list lights
 media_player: !include_dir_merge_list media_player
 scene: !include_dir_merge_list scene
