--- a/groups/wohnzimmer.yaml
+++ b/groups/wohnzimmer.yaml
@@ -2,6 +2,6 @@ wohnzimmer:
   name: Wohnzimmer
   entities:
     - media_player.lg_tv
-    - input_boolean.tv_mode
+    - scene.tv_abend
     - switch.rf_wz_stehlampe
     - switch.rf_wz_lichtkugel
