--- a/scene/good_night.yaml
+++ b/scene/good_night.yaml
@@ -2,7 +2,7 @@
   entities:
     light.stehlampe_flur:
       state: 'on'
-      rgb_color: 255,36,146
+      rgb_color: [255,36,146]
       brightness: 150
     group.all_lights: off
     group.all_switches: off
