--- a/groups/views.yaml
+++ b/groups/views.yaml
@@ -3,15 +3,15 @@ default_view:
   view: yes
   icon: mdi:home
   entities:
+    - group.zuhause
     - climate.heizung
-    - group.familie
     - group.arthur_zimmer
     - group.flur
     - group.kueche
-    - group.esszimmer
     - group.toilette
-    - group.weather
+    # - group.weather
     - group.wohnzimmer
+    - group.schlafzimmer
     - media_player.volumio
 
 media_view:
@@ -21,3 +21,9 @@ media_view:
     - group.emby
     - media_player.lg_tv
     - media_player.volumio
+
+devices_view:
+  name: Geräte
+  view: yes
+  entities:
+    - group.battery_status
