--- a/automations/door_open.yaml
+++ b/automations/door_open.yaml
@@ -3,9 +3,56 @@
     platform: state
     entity_id: binary_sensor.door_window_sensor_158d00014dbac9
     to: 'on'
+  condition:
+    - condition: state
+      entity_id: group.familie
+      state: 'not_home'
   action:
-    service: xiaomi_aqara.play_ringtone
-    data:
-      gw_mac: !secret XIAOMI_GATEWAY_MAC
-      ringtone_id: 8
-      ringtone_vol: 10
+    - service: notify.notify
+      data:
+        title: 'Unbefugtes Betreten der Wohnung'
+        message: 'Jemand hat soeben die Eingangstür geöffnet'
+    - service: light.turn_on
+      entity_id: light.stehlampe_flur
+      data:
+        effect: Alarm
+    - service: light.turn_on
+      entity_id: light.gateway_light_286c0788a9dd
+      data:
+        color_name: red
+    - service: xiaomi_aqara.play_ringtone
+      data:
+        gw_mac: !secret XIAOMI_GATEWAY_MAC
+        ringtone_id: 8
+        ringtone_vol: 50
+    - delay:
+        seconds: 30
+    - service: light.turn_off
+      entity_id: light.stehlampe_flur
+    - service: light.turn_off
+      entity_id: light.gateway_light_286c0788a9dd
+
+- alias: door_open_reminder
+  trigger:
+    platform: state
+    entity_id: binary_sensor.door_window_sensor_158d00014dbac9
+    to: 'on'
+    for:
+      minutes: 2
+  action:
+    - service: notify.notify
+      data:
+        title: 'Eingangstür offen'
+        message: 'Bitte schließen!'
+    - service: media_player.media_pause
+      entity_id: media_player.lg_tv
+    - service: media_player.media_play_pause
+      entity_id: media_player.volumio
+    - service: script.flash_floor_lights
+    - delay:
+        seconds: 2
+    - service: xiaomi_aqara.play_ringtone
+      data:
+        gw_mac: !secret XIAOMI_GATEWAY_MAC
+        ringtone_id: 11
+        ringtone_vol: 50
