--- a/automations/kueche.yaml
+++ b/automations/kueche.yaml
@@ -31,3 +31,15 @@
     service: homeassistant.turn_off
     entity_id: light.beleuchtung_kueche
 
+- alias: kueche_movement_volumio_on
+  trigger:
+    platform: state
+    entity_id: binary_sensor.motion_sensor_158d00012326f7
+    to: 'on'
+  condition:
+    - condition: time
+      after: '06:00:00'
+      before: '20:00:00'
+  action:
+    service: media_player.media_play
+    entity_id: media_player.volumio
