--- a/automations/toilette_motion.yaml
+++ b/automations/toilette_motion.yaml
@@ -9,9 +9,13 @@
       - condition: state
         entity_id: input_boolean.motion_sensor_toilette_aktiv
         state: 'on'
-      - condition: state
+      # - condition: state
+      #   entity_id: sun.sun
+      #   state: 'below_horizon'
+      - condition: numeric_state
         entity_id: sun.sun
-        state: 'below_horizon'
+        value_template: '{{ state.attributes.elevation }}'
+        below: 2
   action:
     service: homeassistant.turn_on
     entity_id: light.beleuchtung_toilette
