--- a/configuration.yaml
+++ b/configuration.yaml
@@ -23,13 +23,14 @@ http:
   trusted_networks:
     - 192.168.10.0/24
 
-ios:
-map:
 config:
 history:
+homekit:
+ios:
 logbook:
-updater:
+map:
 sun:
+updater:
 
 frontend:
   themes: !include_dir_merge_named themes
