--- a/groups/kueche.yaml
+++ b/groups/kueche.yaml
@@ -1,6 +1,8 @@
 kueche:
   name: Küche
+  control: hidden
   entities:
+    - switch.volumio_kueche
     - input_boolean.motion_sensor_kueche_aktiv
     - light.beleuchtung_kueche
     - switch.rf_kueche2
