--- a/groups/toilette.yaml
+++ b/groups/toilette.yaml
@@ -1,7 +1,8 @@
 toilette:
   name: Toilette
+  control: hidden
   entities:
     - input_boolean.motion_sensor_toilette_aktiv
-    - binary_sensor.motion_sensor_158d000113dee1
+    #- binary_sensor.motion_sensor_158d000113dee1
     - sensor.motion_sensor_toilette_last_seen
     - light.beleuchtung_toilette
