--- a/groups/wohnzimmer.yaml
+++ b/groups/wohnzimmer.yaml
@@ -1,7 +1,16 @@
 wohnzimmer:
   name: Wohnzimmer
   entities:
+    - sensor.heizung_temperature
+    - sensor.heizung_humidity
+    - switch.sonoff_wz_1
+    - switch.sonoff_wz_2
+    - switch.rf_wz_stehlampe
+    - switch.rf_wz_lichtkugel
     - media_player.lg_tv
-    - scene.tv_abend
+
+wz_ambiente:
+  name: Ambiente Beleuchtung
+  entities:
     - switch.rf_wz_stehlampe
     - switch.rf_wz_lichtkugel
