--- a/inputs/boolean.yaml
+++ b/inputs/boolean.yaml
@@ -12,3 +12,8 @@ motion_sensor_kueche_aktiv:
   name: Bewegungsmelder aktiv
   initial: on
   icon: mdi:radar
+
+aquarium_light_timer_aktiv:
+  name: Timer aktiv
+  initial: on
+  icon: mdi:clock
