--- a/automations/kueche.yaml
+++ b/automations/kueche.yaml
@@ -60,5 +60,4 @@
       after: '06:00:00'
       before: '20:00:00'
   action:
-    service: media_player.media_play
-    entity_id: media_player.volumio
+    service: script.volumio_play
