--- a/configuration.yaml
+++ b/configuration.yaml
@@ -32,14 +32,16 @@ cloud:
         - scene
         - script
         - switch
+      include_entities:
+        - group.kueche
       exclude_entities:
-        - switch.example
+        - switch.volumio_kueche
     entity_config:
       light.kitchen:
         name: Custom Name for Alexa
       switch.stairs:
         display_categories: LIGHT
-      switch.volumio_kueche:
+      media_player.volumio:
         name: Radio Küche
       media_player.lg_tv:
         name: TV
