disable ffmpeg extra args

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -88,7 +88,7 @@ camera:
   - platform: ffmpeg
     name: arthur_cam
     input: -rtsp_transport tcp -i rtsp://192.168.10.76/unicast
-    extra_arguments: '-c:v h264_omx'
+    #extra_arguments: '-c:v h264_omx'
 
 pilight:
   host: 192.168.10.93
